--- a/DemoSpringMVC/WebContent/WEB-INF/configs/database.properties
+++ b/DemoSpringMVC/WebContent/WEB-INF/configs/database.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName = com.mysql.cj.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306
+jdbc.url = jdbc:mysql://127.0.0.1:3306/store?useLegacyDatetimeCode=false&serverTimezone=UTC
 jdbc.username = root
-jdbc.password = 123456
+jdbc.password = 
