--- a/DemoSpringMVC/WebContent/WEB-INF/configs/database.properties
+++ b/DemoSpringMVC/WebContent/WEB-INF/configs/database.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName = com.mysql.cj.jdbc.Driver
-jdbc.url = jdbc:mysql://127.0.0.1:3306/store?useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc.url = jdbc:mysql://127.0.0.1:3306/store?useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=UTF-8
 jdbc.username = root
 jdbc.password = 
