--- a/DemoSpringMVC/WebContent/WEB-INF/configs/database.properties
+++ b/DemoSpringMVC/WebContent/WEB-INF/configs/database.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName = com.mysql.cj.jdbc.Driver
-jdbc.url = jdbc:mysql://192.168.64.2:3306/ruby?useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=UTF-8
-jdbc.username = ruby
-jdbc.password = Matkhaula123
+jdbc.url = jdbc:mysql://localhost:3306/store?useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=UTF-8
+jdbc.username = root
+jdbc.password = 
